--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "name": "testeigen",
   "version": "1.0.0",
   "description": "Test Eigen",
-  "main": "index.js",
+  "main": "src/index.js",
   "devDependencies": {
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
