--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
     "winston": "^3.8.2"
   },
   "name": "testeigen",
