use typescript in eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,13 @@
     "extends": [
         "airbnb-base"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
     }
 }
