--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "description": "Test Eigen",
   "main": "src/index.js",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
