--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "jest": "^29.4.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3",
@@ -20,14 +19,10 @@
   "description": "Test Eigen",
   "main": "src/index.js",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "typescript": "^4.9.5"
+    "nodemon": "^2.0.20"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
