turn off no-unused-vars eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "func-names": "off"
+        "func-names": "off",
+        "no-unused-vars": "off"
     }
 }
